correction des erreurs de contraste de l'analyse Wave + ajout de balises strong + ajout d'un fallback sur la police + remplacement du fichier style.css par la version minifiée

--- a/assets/style.css
+++ b/assets/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 * {
-	font-family: 'Inter';
+	font-family: 'Inter', Arial, sans-serif;
 	font-style: normal;
 }
 
